version using "type tcpssl SSLV3" or "type tcpssl SSLV2" option.

Fixed: Issue #104: Keep umask Monit was started with when executing
start/stop/restart programs, check programs and creating files.

Fixed: Issue #101: Manual-mode monitored services state may not be
restored if the monitoring state was changed by user right before
the system died.

Fixed: Support TLSv1.1 and TLSv1.2 when FIPS is enabled.


Version 5.9

New: Automatically reload Monit if ID was reset using -r CLI
option.

New: Use human friendly units for memory, swap and space usage
values.

Fixed: If Monit ID file is missing on stop, don't create it
again with current runtime ID (allows to reset ID without
stopping Monit first => intuitive file removal followed by
Monit reload works now).

Fixed: MySQL protocol test anonymous login.

Fixed: Support TLSv1.1 and TLSv1.2 in "set mailserver".

Fixed: Sporadic "PPID changed from 0 to ..." alert after process
restart.

Fixed: Subtract SLAB reclaimable memory from the system memory
usage on Linux.

Fixed: Some systems with upstart (e.g. RHEL/CentOS) had problems
with restart action which consisted of stop+start sequence - the pidfile
disappeared after stop+start sequence and Monit though the process is not
running, as the pidfile was missing due to upstart's synchronization
problems. Monit now waits not just for process exit, but for stop/start program
finish too.

Fixed: "PID/PPID changed" events were sometimes triggered after restart
program.

New: Log output from start/stop/restart programs. In the case of success
the output is logged only in debug mode.

Fixed: Linux: filesystem space usage on some network based filesystems such
as sshfs.

Fixed: large filesystems monitoring on 32-bit platforms.

New: support monitoring of filesystems by generic device strings such as
sshfs on Linux or ZFS filesystems on Solaris. Example usage:
    check filesystem mydata with path "myuser@192.168.1.10:mydata"

New: Max value for expect buffer is 100 KB.
